set(TANTIVYSEARCH_SOURCE_DIR ${ClickHouse_SOURCE_DIR}/contrib/tantivysearch)

# set(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})

find_library (LIBRARY_TANTIVYSEARCH NAMES libtantivysearch.a tantivisearch PATHS ${TANTIVYSEARCH_SOURCE_DIR}/target/release REQUIRED)
find_path (INCLUDE_TANTIVYSEARCH NAMES tantivysearch.h  PATHS ${TANTIVYSEARCH_SOURCE_DIR}/include)

if (LIBRARY_TANTIVYSEARCH AND INCLUDE_TANTIVYSEARCH)
  set(CMAKE_REQUIRED_LIBRARIES ${LIBRARY_TANTIVYSEARCH})
  set(CMAKE_REQUIRED_INCLUDES ${INCLUDE_TANTIVYSEARCH})
  # add_library (tantivysearch INTERFACE)# STATIC IMPORTED)# INTERFACE)
  add_library (tantivysearch STATIC IMPORTED)# STATIC IMPORTED)# INTERFACE)
  # set_property (TARGET tantivysearch PROPERTY INTERFACE_LINK_LIBRARIES  ${LIBRARY_TANTIVYSEARCH})
  set_property (TARGET tantivysearch PROPERTY IMPORTED_LOCATION  ${LIBRARY_TANTIVYSEARCH})
  set_property (TARGET tantivysearch PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${INCLUDE_TANTIVYSEARCH})
  message (STATUS "Using tantivysearch: ${INCLUDE_TANTIVYSEARCH} : ${LIBRARY_TANTIVYSEARCH}")
else()
  message (${RECONFIGURE_MESSAGE_LEVEL} "Can't find tantivysearch")
endif()
