[package]
name = "tantivysearch"
version = "0.1.0"
authors = ["André Guedes <andre.guedes@neoway.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tantivysearch"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2.82"
tantivy = "0.13.2"
